--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,43 +1,38 @@
-name: Deploy Project to App Engine
 
+name: Deploy Project to App Engine
 on:
   push:
     branches:
       - main
-
   # run the workflow manually from the Actions tab
   workflow_dispatch:
 
 jobs:
-#  test:
-#    name: Test and Sonarqube
-#    runs-on: ubuntu-latest
-#
-#    steps:
-#      - name: Checkout repository code
-#        uses: actions/checkout@v2
-#
-#      - name: Install Java 17
-#        uses: actions/setup-java@v3
-#        with:
-#          distribution: "temurin"
-#          java-version: "17"
-#
-#      - name: Test and analyze
-#        run: ./gradlew test jacocoTestReport sonarqube
-#        env:
-#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-#          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+  sonarcloud:
+    name: SonarCloud
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0 # Shallow clones should be disabled for a better relevancy of analysis
+      - name: SonarCloud Scan
+        uses: SonarSource/sonarcloud-github-action@master
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # Needed to get PR information, if any
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
   deploy:
     name: Deploying to Google Cloud
     runs-on: ubuntu-latest
-    # needs: test
-
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
-
+        uses: actions/checkout@v3
+      - name: Use Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: "18.x"
+      - run: npm install
+      - run: npm run build
       - name: Deploy to App Engine
         id: deploy
         uses: google-github-actions/deploy-appengine@v0.2.0
@@ -45,6 +40,3 @@ jobs:
           deliverables: app.yaml
           version: v1
           credentials: ${{ secrets.GCP_SERVICE_CREDENTIALS }}
-
-      - name: Test
-        run: curl "${{ steps.deploy.outputs.url }}"
