--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
-sonar.projectKey=sopra-fs24-group-19_c
-sonar.organization=sopra-fs24-group-19
+sonar.projectKey=TODO
+sonar.organization=TODO
 
 # This is the name and version displayed in the SonarCloud UI.
 #sonar.projectName=client
