--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
-sonar.projectKey=TODO
-sonar.organization=TODO
+sonar.projectKey=sopra-fs24-group-19_c
+sonar.organization=sopra-fs24-group-19
 
 # This is the name and version displayed in the SonarCloud UI.
 #sonar.projectName=client
@@ -9,4 +9,4 @@ sonar.organization=TODO
 sonar.sources=./src
 
 # Encoding of the source code. Default is default system encoding
-#sonar.sourceEncoding=UTF-8
+#sonar.sourceEncoding=UTF
