Added Tailwind CSS and updated scripts to use CRACO

--- a/package.json
+++ b/package.json
@@ -3,22 +3,24 @@
   "version": "0.24.0",
   "private": true,
   "dependencies": {
+    "@craco/craco": "^7.1.0",
+    "autoprefixer": "^9.8.8",
     "axios": "^1.6.7",
     "eslint-config-react-app": "^7.0.1",
+    "postcss": "^7.0.39",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.3",
     "react-scripts": "^5.0.1",
     "serve": "^14.2.1",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17",
     "typescript": "^3.2.1"
   },
   "scripts": {
-    "dev": "react-scripts start",
-    "start": "serve -s build",
-    "build": "react-scripts build",
-    "gcp-build": "",
-    "eject": "react-scripts eject",
-    "test": "react-scripts test --env=jsdom"
+    "start": "craco start",
+    "build": "craco build",
+    "test": "craco test",
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
