--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "@craco/craco": "^7.1.0",
     "autoprefixer": "^9.8.8",
     "axios": "^1.6.7",
+    "bootstrap": "^5.3.3",
     "eslint-config-react-app": "^7.0.1",
     "postcss": "^7.0.39",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.3",
     "react-scripts": "^5.0.1",
