--- a/package.json
+++ b/package.json
@@ -5,18 +5,18 @@
   "dependencies": {
     "@craco/craco": "^7.1.0",
     "@mui/icons-material": "^5.15.14",
-    "autoprefixer": "^9.8.8",
+    "autoprefixer": "^10.4.19",
     "axios": "^1.6.7",
     "bootstrap": "^5.3.3",
     "eslint-config-react-app": "^7.0.1",
-    "postcss": "^7.0.39",
+    "postcss": "^8.4.38",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.3",
     "react-scripts": "^5.0.1",
     "serve": "^14.2.1",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17",
+    "tailwindcss": "^3.4.3",
     "typescript": "^3.2.1"
   },
   "scripts": {
