--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -2,5 +2,19 @@
   "trailingComma": "es5",
   "tabWidth": 2,
   "semi": true,
-  "singleQuote": false
+  "singleQuote": false,
+  "overrides": [
+    {
+      "files": "*.js",
+      "options": {
+        "indent": "off"
+      }
+    },
+    {
+      "files": "*.tsx",
+      "options": {
+        "indent": "off"
+      }
+    }
+  ]
 }
