--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,20 +1,4 @@
 {
   "trailingComma": "es5",
-  "tabWidth": 2,
-  "semi": true,
-  "singleQuote": false,
-  "overrides": [
-    {
-      "files": "*.js",
-      "options": {
-        "indent": "off"
-      }
-    },
-    {
-      "files": "*.tsx",
-      "options": {
-        "indent": "off"
-      }
-    }
-  ]
+  "semi": true
 }
