ignoring indentation issues

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,10 +22,10 @@
         "eqeqeq": "error",
         "no-unreachable": "error",
         "no-duplicate-imports": "error",
-        "no-multiple-empty-lines": "warn",
-        "indent": ["warn", 2],
+        "no-multiple-empty-lines": "off",
+        "indent": ["off", 2],
         "quotes": ["off", "double"],
-        "newline-before-return": "warn",
+        "newline-before-return": "off",
         "padding-line-between-statements": [
             "warn",
             { "blankLine": "always", "prev": "*", "next": "export" }
