--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.3",
     "react-scripts": "^5.0.1",
+    "react-star-ratings": "^2.3.0",
     "serve": "^14.2.1",
     "tailwindcss": "^3.4.3",
     "typescript": "^3.2.1"
