--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-router-dom": "^6.21.3",
     "react-scripts": "^5.0.1",
     "react-star-ratings": "^2.3.0",
+    "react-icons": "^4.3.1",
     "serve": "^14.2.1",
     "tailwindcss": "^3.4.3",
     "typescript": "^3.2.1"
