--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
     "react-bootstrap": "^2.10.2",
     "react-datepicker": "^6.6.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.3.1",
+    "react-phone-number-input": "^3.4.1",
     "react-router-dom": "^6.21.3",
     "react-scripts": "^5.0.1",
     "react-star-ratings": "^2.3.0",
-    "react-icons": "^4.3.1",
     "serve": "^14.2.1",
     "tailwindcss": "^3.4.3",
     "typescript": "^3.2.1"
