--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "autoprefixer": "^10.4.19",
     "axios": "^1.6.7",
     "bootstrap": "^5.3.3",
+    "dayjs": "^1.11.11",
     "eslint-config-react-app": "^7.0.1",
     "postcss": "^8.4.38",
     "react": "^18.2.0",
